--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "bugs": {
     "url": "https://github.com/pjarmalavicius/react-rotatable/issues"
   },
-  "homepage": "https://github.com/pjarmalavicius/react-rotatable.git",
+  "homepage": "https://pjarmalavicius.github.io/react-rotatable/",
   "devDependencies": {
     "babel-cli": "^6.1.18",
     "babel-core": "^6.0.0",
